[build-system]
requires = [
    "PyYAML==5.4.1",
    "Jinja2==3.0.1",
    "jsonschema==3.2.0",
]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "levy"
author = "pmbrull"
author-email = "peremiquelbrull@gmail.com"
home-page = "https://github.com/pmbrull/levy"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
description-file = "README.md"
