[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "levy"
author = "pmbrull"
author-email = "peremiquelbrull@gmail.com"
home-page = "https://github.com/pmbrull/levy"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

description-file = "README.md"
requires = [
    "PyYAML==5.4.1",
    "Jinja2==3.0.1",
    "pydantic==1.8.2",
]
requires-python = ">=3.6"

[tool.flit.metadata.requires-extra]
test = [
    "pytest >=6.2.4,<7.0.0",
    "coverage >=5.5,<6.0",
    "black >=21.5b1,<22.0b0",
    "isort >=5.9.3,<6.0.0",
    "pre-commit >= 2.9.2,<3.0.0",
]
doc = [
    "mkdocs >=1.1.2,<2.0.0",
    "mkdocs-material >=5.4.0,<6.0.0",
    "markdown-include >=0.5.1,<0.6.0",
]
